Agrego *ngFor en lista-contactos.component.html
Agrego *ngFor en lista-contactos.component.html para recorrer mi lista de contactos, y mi <app-lista-contactos> lo meto dentro de un div en app.component.html para tenerlo más organizado

--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -8,10 +8,11 @@
     </tr>
   </head>
   <tbody>
-    <tr>
-      <th>Nombre</th>
-      <th>Apellido</th>
-      <th>Email</th>
+    <tr *ngFor="let contacto of contactos">
+      <td>{{contacto.nombre}}</td>
+      <td>{{contacto.apellido}}</td>
+      <td>{{contacto.email}}</td>
+
     </tr>
   </tbody>
 </table>
