--- a/gestion-contactos-frontend/src/app/app.component.html
+++ b/gestion-contactos-frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1 class="text-center">{{title}}</h1>
-<app-lista-contactos></app-lista-contactos>
+<div class="container">
+  <app-lista-contactos></app-lista-contactos>
+</div>
