--- a/gestion-contactos-frontend/src/app/app.component.html
+++ b/gestion-contactos-frontend/src/app/app.component.html
@@ -1,4 +1,12 @@
+<nav class="navbar-expand-sm bg-dark navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a routerLink="contactos" routerLinkActive="active" class="nav-link">Lista de contactos</a>
+    </li>
+  </ul>
+</nav>
+
 <h1 class="text-center">{{title}}</h1>
 <div class="container">
-  <app-lista-contactos></app-lista-contactos>
+  <router-outlet></router-outlet>
 </div>
