Creo un componente "registrar contacto"
Creo un componente que se mostrará en la parte superior de la pantalla que servirá para registrar a un contacto

--- a/gestion-contactos-frontend/src/app/app.component.html
+++ b/gestion-contactos-frontend/src/app/app.component.html
@@ -3,6 +3,9 @@
     <li class="nav-item">
       <a routerLink="contactos" routerLinkActive="active" class="nav-link">Lista de contactos</a>
     </li>
+    <li class="nav-item">
+      <a routerLink="registrar-contacto" routerLinkActive="active" class="nav-link">Añadir contacto</a>
+    </li>
   </ul>
 </nav>
 
