--- a/gestion-contactos-frontend/src/app/registrar-contacto/registrar-contacto.component.html
+++ b/gestion-contactos-frontend/src/app/registrar-contacto/registrar-contacto.component.html
@@ -1,1 +1,35 @@
-<p>registrar-contacto works!</p>
+<div class="col-md-6 offset-md-3">
+  <h3 class="text-center">Registro de contacto</h3>
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label>Nombre : </label>
+      <input type="text"
+      class="form-control"
+      id="nombre"
+      [(ngModel) = "contacto.nombre"]
+      name="nombre"
+      >
+    </div>
+
+    <div class="form-group">
+      <label>Apellido : </label>
+      <input type = "text"
+      class="form-control"
+      id = "apellido"
+      [(ngModel) = "contacto.apellido"]
+      name = "apellido"
+      >
+    </div>
+
+    <div class="form-group">
+      <label>Email : </label>
+      <input type = "email"
+      class ="form-control"
+      id = "email"
+      [(ngModel) = "contacto.email"]
+      name = "email"
+      >
+    </div>
+    <button class="btn btn-success">Guardar</button>
+  </form>
+</div>
