--- a/gestion-contactos-frontend/src/app/registrar-contacto/registrar-contacto.component.html
+++ b/gestion-contactos-frontend/src/app/registrar-contacto/registrar-contacto.component.html
@@ -5,8 +5,8 @@
       <label>Nombre : </label>
       <input type="text"
       class="form-control"
-      id="nombre"
-      [(ngModel) = "contacto.nombre"]
+      id = "nombre"
+      [(ngModel)] = "contacto.nombre"
       name="nombre"
       >
     </div>
@@ -16,7 +16,7 @@
       <input type = "text"
       class="form-control"
       id = "apellido"
-      [(ngModel) = "contacto.apellido"]
+      [(ngModel)] = "contacto.apellido"
       name = "apellido"
       >
     </div>
@@ -26,7 +26,7 @@
       <input type = "email"
       class ="form-control"
       id = "email"
-      [(ngModel) = "contacto.email"]
+      [(ngModel)] = "contacto.email"
       name = "email"
       >
     </div>
