--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -12,7 +12,10 @@
       <td>{{contacto.nombre}}</td>
       <td>{{contacto.apellido}}</td>
       <td>{{contacto.email}}</td>
-
+      <td>
+        <button (click)= "actualizarContacto(contacto.id)" class="btn btn-info">Editar</button>
+        <button (click)= "eliminarContacto(contacto.id)" class="btn btn-info" style="margin-left: 10px;">Eliminar</button>
+      </td>
     </tr>
   </tbody>
 </table>
