Creo método verDetallesDelContacto
Creo este método que tendrá un botón para poder ver a detalle cada contacto

--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -15,7 +15,8 @@
       <td>{{contacto.email}}</td>
       <td>
         <button (click)= "actualizarContacto(contacto.id)" class="btn btn-info">Editar</button>
-        <button (click)= "eliminarContacto(contacto.id)" class="btn btn-info" style="margin-left: 10px;">Eliminar</button>
+        <button (click)= "eliminarContacto(contacto.id)" class="btn btn-danger" style="margin-left: 10px;">Eliminar</button>
+        <button (click)= "verDetallesDelContacto(contacto.id)" class="btn btn-primary" style="margin-left: 10px;">Detalles</button>
       </td>
     </tr>
   </tbody>
