Edito campos del detalle de contacto
Edito los campos que tendrá el componente "lista-contactos.component"

--- a/gestion-contactos-frontend/src/app/contacto-detalles/contacto-detalles.component.html
+++ b/gestion-contactos-frontend/src/app/contacto-detalles/contacto-detalles.component.html
@@ -1,1 +1,15 @@
-<p>contacto-detalles works!</p>
+<h3>Detalles del Contacto</h3>
+<div>
+  <div>
+    <label><b>ID : </b> {{ contacto.id }}</label>
+  </div>
+  <div>
+    <label><b>Nombre : </b> {{ contacto.nombre }}</label>
+  </div>
+  <div>
+    <label><b>Apellido : </b> {{ contacto.apellido }}</label>
+  </div>
+  <div>
+    <label><b>Email : </b> {{ contacto.email }}</label>
+  </div>
+</div>
