--- a/gestion-contactos-frontend/src/app/registrar-contacto/registrar-contacto.component.html
+++ b/gestion-contactos-frontend/src/app/registrar-contacto/registrar-contacto.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 offset-md-3">
   <h3 class="text-center">Registro de contacto</h3>
-  <form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()" #contactoForm = "ngForm">
     <div class="form-group">
       <label>Nombre : </label>
       <input type="text"
@@ -8,7 +8,23 @@
       id = "nombre"
       [(ngModel)] = "contacto.nombre"
       name="nombre"
+      required
+      minlength="4"
+      maxlength="10"
+      placeholder="Digite su nombre "
+      #nombre = "ngModel"
       >
+      <div class="alert alert-danger" *ngIf="nombre.invalid && (nombre.dirty || nombre.touched)">
+        <div *ngIf="nombre.errors.required">
+          Digite su nombre por favor
+        </div>
+        <div *ngIf="nombre.errors.minlength">
+          El nombre tiene que contener como mínimo 4 caracteres
+        </div>
+        <div *ngIf="nombre.errors.maxlength">
+          El nombre tiene que contener como máximo 10 caracteres
+        </div>
+      </div>
     </div>
 
     <div class="form-group">
@@ -18,7 +34,23 @@
       id = "apellido"
       [(ngModel)] = "contacto.apellido"
       name = "apellido"
+      required
+      minlength="4"
+      maxlength="10"
+      placeholder="Digite su apellido "
+      #apellido = "ngModel"
       >
+      <div class="alert alert-danger" *ngIf="apellido.invalid && (apellido.dirty || apellido.touched)">
+        <div *ngIf="apellido.errors.required">
+          Digite su apellido por favor
+        </div>
+        <div *ngIf="apellido.errors.minlength">
+          El apellido tiene que contener como mínimo 4 caracteres
+        </div>
+        <div *ngIf="apellido.errors.maxlength">
+          El apellido tiene que contener como máximo 10 caracteres
+        </div>
+      </div>
     </div>
 
     <div class="form-group">
@@ -28,8 +60,21 @@
       id = "email"
       [(ngModel)] = "contacto.email"
       name = "email"
+      pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}"
+      required
+      placeholder="Digite su email "
+      #email = "ngModel"
       >
+      <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+        <div *ngIf="email.errors.required">
+          Digite su email por favor
+        </div>
+        <div *ngIf="email.errors.pattern">
+          Por favor revisa el formato del email
+        </div>
+      </div>
     </div>
-    <button class="btn btn-success">Guardar</button>
+
+    <button class="btn btn-success" [disabled]= "!contactoForm.form.valid">Guardar</button>
   </form>
 </div>
