--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -21,3 +21,9 @@
     </tr>
   </tbody>
 </table>
+
+<div class="pagination">
+  <button (click)="cambiarPagina(currentPage - 1)" [disabled]="currentPage === 1">Anterior</button>
+  <span>Página {{ currentPage }}</span>
+  <button (click)="cambiarPagina(currentPage + 1)">Siguiente</button>
+</div>
