--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -1,3 +1,14 @@
+<!--Esto lo saqué de la página de https://getbootstrap.com/docs/4.0/components/forms/#form-controls -->
+<form class="form-inline" th:action="@{}">
+  <div class="form-group mb-2">
+    <label>Filtrar: </label>
+  </div>
+  <div class="form-group mx-sm-3 mb-2">
+    <input type="text" name="palabraClave" class="form-control" id="palabraClave" th:value="${palabraClave}" placeholder="Digite el valor a buscar" required>
+  </div>
+  <input type="submit" class="btn btn-secondary mb-2" value="Limpiar">
+</form>
+
 <h2>Lista contactos</h2>
 <table class="table table-striped">
   <thead class="table-dark">
