--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -4,8 +4,10 @@
     <label>Filtrar: </label>
   </div>
   <div class="form-group mx-sm-3 mb-2">
-    <input type="text" name="palabraClave" class="form-control" id="palabraClave" th:value="${palabraClave}" placeholder="Digite el valor a buscar" required>
+    <input type="text" name="palabraClave" class="form-control" id="palabraClave" th:value="${palabraClave}" placeholder="A quién buscas?" required>
   </div>
+  <input type="submit" class="btn btn-primary mb-2" value="Buscar">
+  &nbsp;&nbsp;
   <input type="submit" class="btn btn-secondary mb-2" value="Limpiar">
 </form>
 
