--- a/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
+++ b/gestion-contactos-frontend/src/app/lista-contactos/lista-contactos.component.html
@@ -1,17 +1,20 @@
 <!--Esto lo saqué de la página de https://getbootstrap.com/docs/4.0/components/forms/#form-controls -->
-<form class="form-inline" th:action="@{}">
+<br>
+<!-- Formulario de búsqueda -->
+<form class="form-inline" (ngSubmit)="buscarContactos()">
   <div class="form-group mb-2">
     <label>Filtrar: </label>
   </div>
   <div class="form-group mx-sm-3 mb-2">
-    <input type="text" name="palabraClave" class="form-control" id="palabraClave" th:value="${palabraClave}" placeholder="A quién buscas?" required>
+    <input type="text" [(ngModel)]="palabraClave" name="palabraClave" class="form-control" id="palabraClave" placeholder="A quién buscas?" required>
   </div>
-  <input type="submit" class="btn btn-primary mb-2" value="Buscar">
+  <button type="submit" class="btn btn-info mb-2">Buscar</button>
   &nbsp;&nbsp;
-  <input type="submit" class="btn btn-secondary mb-2" value="Limpiar">
 </form>
+<br>
 
 <h2>Lista contactos</h2>
+<br>
 <table class="table table-striped">
   <thead class="table-dark">
     <tr>
